--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^25.1.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "serverless": "^1.67.0"
   }
 }
